--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Exo|Quicksand&display=swap" rel="stylesheet">
-  <title>Uber tickets</title>
+  <title>TOUT</title>
 </head>
 
 <body>
